Fixed visibility mistakes with added ::after to content class to regular-customers section.

--- a/css/main.css
+++ b/css/main.css
@@ -445,7 +445,7 @@ body {
   content: "";
   display: block;
   height: 90px;
-  width: 170;
+  width: 170px;
   background-image: url(../studio-images/logo/YA-&-CO.svg);
 }
 
@@ -453,7 +453,7 @@ body {
   content: "";
   display: block;
   height: 90px;
-  width: 170;
+  width: 170px;
   background-image: url(../studio-images/logo/COMPANY-TAG-LINE-HERE.svg);
 }
 
@@ -461,7 +461,7 @@ body {
   content: "";
   display: block;
   height: 90px;
-  width: 170;
+  width: 170px;
   background-image: url(../studio-images/logo/COMPANY.svg);
 }
 
@@ -469,7 +469,7 @@ body {
   content: "";
   display: block;
   height: 90px;
-  width: 170;
+  width: 170px;
   background-image: url(../studio-images/logo/FOSTER-PETERS.svg);
 }
 
@@ -477,7 +477,7 @@ body {
   content: "";
   display: block;
   height: 90px;
-  width: 170;
+  width: 170px;
   background-image: url(../studio-images/logo/BRAND.svg);
 }
 
@@ -485,7 +485,7 @@ body {
   content: "";
   display: block;
   height: 90px;
-  width: 170;
+  width: 170px;
   background-image: url(../studio-images/logo/COMPANY-TAG-LINE.svg);
 }
 
